--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mdx-js/react": "^2.0.0",
+    "@theme-ui/presets": "^0.13.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
