--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mdx-js/react": "^2.0.0",
+    "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/react": "1.6.22",
+    "@next/mdx": "^12.1.0",
     "@theme-ui/presets": "^0.13.1",
     "next": "12.1.0",
     "react": "17.0.2",
