--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@mdx-js/react": "1.6.22",
     "@next/mdx": "^12.1.0",
     "@theme-ui/presets": "^0.13.1",
+    "cors": "^2.8.5",
+    "dotenv-load": "^2.0.0",
     "next": "12.1.0",
+    "next-connect": "^0.12.2",
+    "next-env": "^1.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "theme-ui": "^0.13.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
