--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "next": "12.1.0",
     "next-connect": "^0.12.2",
     "next-env": "^1.1.1",
+    "node-json-db": "^1.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "theme-ui": "^0.13.1"
+    "theme-ui": "^0.13.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
