--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/uuid": "^8.3.4",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "prettier": "^2.5.1",
     "typescript": "4.6.2"
   }
 }
