--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/react": "1.6.22",
     "@next/mdx": "^12.1.0",
     "@theme-ui/presets": "^0.13.1",
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv-load": "^2.0.0",
     "next": "12.1.0",
