--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mdx-js/loader": "^2.0.0",
     "@mdx-js/react": "1.6.22",
     "@next/mdx": "^12.1.0",
     "@theme-ui/presets": "^0.13.1",
+    "apollo-server": "^3.6.4",
+    "apollo-server-core": "^3.6.4",
+    "apollo-server-micro": "^3.6.4",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv-load": "^2.0.0",
+    "graphql": "^16.3.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "12.1.0",
     "next-connect": "^0.12.2",
     "next-env": "^1.1.1",
@@ -29,6 +36,8 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/micro": "^7.3.7",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/uuid": "^8.3.4",
