--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@theme-ui/presets": "^0.13.1",
     "apollo-server": "^3.6.4",
     "apollo-server-core": "^3.6.4",
+    "apollo-server-errors": "^3.3.1",
     "apollo-server-micro": "^3.6.4",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
