--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -15,6 +16,7 @@
     "@mdx-js/loader": "^2.0.0",
     "@mdx-js/react": "1.6.22",
     "@next/mdx": "^12.1.0",
+    "@prisma/client": "^3.11.1",
     "@theme-ui/presets": "^0.13.1",
     "apollo-server": "^3.6.4",
     "apollo-server-core": "^3.6.4",
@@ -30,6 +32,7 @@
     "next-connect": "^0.12.2",
     "next-env": "^1.1.1",
     "node-json-db": "^1.5.0",
+    "prisma": "^3.11.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "theme-ui": "^0.13.1",
