--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prisma:db:push": "npx prisma db push",
     "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
